# hwdrf

./: pyproject.toml  readme.md
config/: .coverage  .env.sample  payment.json  users.json
config/config/: celery.py  settings.py  urls.py
config/education/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
config/education/migrations/: 0001_initial.py  0002_lesson_course_alter_course_description_and_more.py  0003_payment.py  0004_alter_lesson_course_alter_payment_course_and_more.py  0005_alter_course_picture_alter_lesson_picture.py  0006_course_owner_lesson_owner.py  0007_alter_lesson_options_subscription.py  0008_alter_subscription_is_active.py  0009_alter_subscription_user.py  0010_alter_lesson_course_alter_subscription_user.py  0011_alter_subscription_course.py  0012_rename_sum_of_payment_payment_amount_course_price_and_more.py  0013_alter_payment_payment_method.py  0014_alter_lesson_price.py  0015_alter_lesson_course.py
config/education/services/: create_pay.py
config/users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
config/users/management/commands/: create_su.py  create_users.py
config/users/migrations/: 0001_initial.py  0002_user_username.py  0003_rename_town_user_country.py  0004_rename_country_user_town.py  0005_user_role.py
